--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "understanding-ts",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,6 +9,15 @@
   "author": "Maximilian Schwarzmüller",
   "license": "ISC",
   "devDependencies": {
-    "lite-server": "^2.5.4"
-  }
+    "lite-server": "^2.6.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gcyburt/TypeScript2022.git"
+  },
+  "bugs": {
+    "url": "https://github.com/gcyburt/TypeScript2022/issues"
+  },
+  "homepage": "https://github.com/gcyburt/TypeScript2022#readme",
+  "description": ""
 }
